<resources>
    <string name="app_name">MobileApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Tab 1</string>
    <string name="title_notifications">Tab 2</string>
    <string name="n_82_n_8214">Невмержицький Михайло \nГрупа ІО-82\nЗК ІО-8214</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chart_1">Chart 1</string>
    <string name="chart_2">Chart 2</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_type">Enter Type</string>

    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobno">Mobile No.</string>
    <string name="reg_no">Reg</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
</resources>