<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ua.kpi.comsys.io8214.mobileapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ua.kpi.comsys.io8214.mobileapp.ui.charts.Chart1Fragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_chart1" />

    <fragment
        android:id="@+id/navigation_films"
        android:name="ua.kpi.comsys.io8214.mobileapp.ui.films.FilmsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/films_fragment" />

    <fragment
        android:id="@+id/navigation_images"
        android:name="ua.kpi.comsys.io8214.mobileapp.ui.images.ImageFragment"
        android:label="Tab 3"
        tools:layout="@layout/images_fragment" />
</navigation>